Fixed Bug #70557 (Memleak on return type verifying failed)